--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "query-string": "6.1.0",
     "raf": "3.4.0",
     "react": "^16.4.2",
     "react-dev-utils": "^5.0.1",
@@ -50,7 +49,8 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "decode-uri-component": "^0.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
